--- a/gRPC/package.json
+++ b/gRPC/package.json
@@ -4,20 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "pb:gen": "./scripts/gen.sh greet calculator",
+    "pb:gen": "./scripts/gen.sh greet calculator blog",
     "greet:pb:gen": "./scripts/gen.sh greet",
     "greet:server": "node greet/server/index.js",
     "greet:client": "node greet/client/index.js",
     "calculator:pb:gen": "./scripts/gen.sh calculator",
     "calculator:server": "node calculator/server/index.js",
-    "calculator:client": "node calculator/client/index.js"
+    "calculator:client": "node calculator/client/index.js",
+    "blog:db": "cd blog; docker-compose up; cd..",
+    "blog:pb:gen": "./scripts/gen.sh blog",
+    "blog:server": "node blog/server/index.js",
+    "blog:client": "node blog/client/index.js",
+    "ssl:gen": "cd ssl && ../scripts/ssl.sh && cd .."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.8.17",
-    "google-protobuf": "^3.21.2"
+    "google-protobuf": "^3.21.2",
+    "mongodb": "^5.6.0"
   },
   "devDependencies": {
     "grpc-tools": "^1.12.4"
